# BSplineFitting

SplineFitting/: CMakeLists.txt  main.cpp
test_data/: 01.txt_controls.txt  01.txt_spline.txt  02.txt_controls.txt  02.txt_spline.txt  03.txt_controls.txt  03.txt_spline.txt
